# lewm

./: README.md  eval.py  eval_fm.py  mse_vs_integration_steps.py  plot_overlay.py  plot_sample_time.py  pyproject.toml  rename_weights.py  train.py  train_action_expert.py  train_decoder.py  train_encoder_decoder.py  train_encoder_decoder_conv.py  train_fm.py  visualize_eval.py
config/eval/: pusht_fm.yaml
config/train/: decoder.yaml  encoder_decoder.yaml  encoder_decoder_conv.yaml  lewm.yaml  lewm_fm.yaml
config/train/model/: lewm.yaml  lewm_fm.yaml
src/lewm/: __init__.py  decoder.py  grid_viz.py  jepa.py  jepa_fm.py  module.py  time_utils.py  utils.py
